--- a/seaborn-dash-conversion/plotly-react-tutorial/weather-app/public/index.html
+++ b/seaborn-dash-conversion/plotly-react-tutorial/weather-app/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -26,6 +27,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <!-- plotly.js -->
+    <script src="https://cdn.plot.ly/plotly-1.8.0.min.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
